# novae-linguae

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
spec/: README.md  agent-loop.md  body-expression.schema.json  bundle.schema.json  canonical-serialization.md  certification.schema.json  claim-expression.schema.json  commitment-expression.schema.json  commons.md  crypto-conformance.md  did-document.md  did-document.schema.json  encrypted-envelope.schema.json  encryption.md  eval-attestation.schema.json  evaluation.md  expressiveness.md  function-record.schema.json  function-record.v0.2.schema.json  intent-tag-vocabulary.md  message.schema.json  message.v0.2.schema.json  predicate-expression.schema.json  resilience.md  surface-syntax.md  trace.schema.json  trust-model.md  type-expression.schema.json  value-expression.schema.json  weights.md  weights.schema.json
spec/conformance/: README.md  encryption.json  manifest.json
spec/examples/: ack-query.v0.2.json  add.json  append.json  assert-observed.v0.2.json  assert-result.v0.2.json  assert-verified.v0.2.json  assert.json  assert.v0.2.json  attest-c21-14b-s1.json  attest-c23-14b-s1.json  attest-coder14b-c10-s1.json  attest-coder14b-c14-s1.json  attest-coder3b-c12-s1.json  attest-coder3b-c13-s1.json  attest-coder3b-c14-s0.json  attest-coder7b-c12-s1.json  attest-coder7b-c13-s1.json  attest-coder7b-c14-s1.json  body-add.json  body-append.json  body-config-port.json  body-contributors-report.json  body-create-thing.json  body-csv-second-int.json  body-delete-item.json  body-dispatch-command.json  body-double-second-field.json  body-double.json  body-fetch-contributors-report.json  body-fetch-pages.json  body-foldl.json  body-foldr.json  body-follow-redirect.json  body-greet.json  body-health-check.json  body-insert-sorted.json  body-is-zero.json  body-item-roundtrip.json  body-item-status.json  body-json-get.json  (+114 more)
tooling/commons-node/: .env.example  .env.prod.example  Caddy.Dockerfile  Caddyfile  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  requirements.txt  seed_certifications.py
tooling/corpus/: .gitignore  README.md  corpus.jsonl  corpus.jsonl.manifest.json  gen_corpus.py
tooling/crypto-python/: README.md  ml_kem.py  nl_crypto.py  nl_encrypt.py
tooling/eval/: .gitignore  FINETUNING.md  FINETUNING_CPU.md  FINETUNING_OPENWEIGHTS.md  README.md  REFERENCE_CHECKPOINT.md  eval_harness.py  export_finetune.py  model_client.py  train_lora_cpu.py
tooling/validator/: Cargo.toml  README.md
tooling/validator/examples/: gen_conformance.rs
tooling/validator/fixtures/: sample_ingest.rs
tooling/validator/src/: assemble.rs  attestation.rs  certify.rs  cluster.rs  commons_client.rs  complexity.rs  compose.rs  delegation.rs  effects.rs  equiv.rs  eval.rs  explore.rs  induct.rs  interp.rs  lemmas.rs  lib.rs  main.rs  normalize.rs  orchestrate.rs  policy.rs  proptest.rs  prove.rs  refine.rs  respond.rs  seal.rs  terminate.rs  typecheck.rs
tooling/validator/src/surface/: body.rs  lexer.rs  mod.rs  predicate.rs  types.rs  values.rs
tooling/validator/tests/: artifact_kind.rs  canonicalization.rs  check_body.rs  check_predicate.rs  check_type.rs  check_value.rs  conformance.rs  ref_resolution.rs  schema_validation.rs  signing.rs  type_artifacts.rs
tooling/validator/tests/common/: mod.rs
(+112 files in other folders)
