[package]
name = "nl-validator"
version = "0.1.0"
edition = "2021"
description = "Reference validator, canonicalizer, and hasher for Novae Linguae artifacts"
license = "Apache-2.0 OR MIT"
publish = false

[[bin]]
name = "nl-validator"
path = "src/main.rs"

[[bin]]
name = "nl-ingest"
path = "src/bin/nl_ingest.rs"

[[bin]]
name = "nl-seal"
path = "src/bin/nl_seal.rs"

[lib]
name = "nl_validator"
path = "src/lib.rs"

[features]
# `surface` adds the surface-syntax parsers/pretty-printers and their CLI
# subcommands (parse-type/unparse-type, …). On by default so the `nl-validator`
# binary always has them; build with `--no-default-features` for the lean core
# validator. The parsers are pure Rust (no extra dependencies).
default = ["surface"]
surface = []

[dependencies]
anyhow = "1"
base64 = "0.22"
blake3 = "1"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
curve25519-dalek = "4"
ed25519-dalek = "2"
hkdf = "0.12"
ml-kem = { version = "0.3.2", features = ["hazmat"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
webpki-roots = "0.26"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
jsonschema = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.1"
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
quote = "1"
proc-macro2 = "1"
